src/generator/snapshots/darklua_core__generator__test__readable__snapshots__local_function__readable_local_function_empty_variadic_with_one_parameter.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
local function foo(bar, ...) end
