src/generator/snapshots/darklua_core__generator__test__readable__snapshots__local_function__readable_local_function_empty_with_2_attributes.snap
---
source: src/generator/mod.rs
expression: generator.into_string()
---
@native
@deprecated
local function foo() end
